--- a/Mariadb_Replication/slave.cnf
+++ b/Mariadb_Replication/slave.cnf
@@ -34,7 +34,9 @@ slave_skip_errors=1062
 server-id=2
 
 # bin-log
-log_bin=slave-mariadb-bin
+# log_bin=slave-mariadb-bin
+log_bin=/var/lib/mysql/bin-log
+max_binlog_size=10K
 
 # 表示slave将复制事件写进自己的二进制日志
 log_slave_updates=1
@@ -50,3 +52,4 @@ read_only=1
 # sync_binlog=n，当每进行n次事务提交之后，MySQL将进行一次fsync之类的磁盘同步指令来将binlog_cache中的数据强制写入磁盘
 # 1 最安全，但是最慢。 0 最快，但是风险最大
 sync_binlog=0
+
